assets/js/base/components/chip/style.scss
.wc-block-components-chip {
	display: inline-block;
	background: $core-grey-light-500;
	padding: 0.365em 0.5em;
	margin: 0 0.365em 0.365em 0;
	color: $core-grey-dark-800;
	border-radius: 0;
	line-height: 1em;

	&.wc-block-components-chip--radius-small {
		border-radius: 3px;
	}
	&.wc-block-components-chip--radius-medium {
		border-radius: 0.433em;
	}
	&.wc-block-components-chip--radius-large {
		border-radius: 0.865em;
		padding: 0.365em 0.75em;
	}

	.wc-block-components-chip__remove {
		background: transparent;
		border: 0;
		padding: 0;
		appearance: none;
		float: none;
		vertical-align: middle;
		margin: 0 0 0 0.5em;
		font-size: 12px;

		&:hover,
		&:focus {
			color: #d94f4f;
		}
		&:disabled {
			color: $core-grey-dark-100;
			cursor: not-allowed;
		}
	}
}

